# gpt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: debug.toml
gpt/: __init__.py  ckpt.py  config.py  data.py  loss.py  optim.py  train.py  utils.py
gpt/modeling/: kda.py
gpt/models/: __init__.py  base.py  gpt.py
gpt/models/kda/: __init__.py  layers.py  model.py
gpt/models/olmo/: __init__.py  layers.py  model.py
gpt/models/transformer/: __init__.py  layers.py  model.py
gpt/optimizer/: README.md  __init__.py  muon.py  newton_schulz_triton.py  opt_utils.py  scalar_opts.py
